# pizer

./: .gitignore  PiZer_GUI_Launcher.bat  PiZer_Launcher.bat  README.md  build_apk.md  build_flutter_apk.md  create_encrypted.py  create_installer.py  pizer.bat  pizer.sh  prepare_apk.py  prepare_flutter_pkg.py  pyproject.toml  recovery_output.txt  requirements.txt  verify_browse.py  verify_cli.py  verify_gui.py  verify_gui_syntax.py  verify_inspector.py  verify_recovery_init.py
APK_Source/: buildozer.spec
APK_Source/pizer/: inspector.py  stream_reader.py
APK_Source/pizer/recovery/: brute_force.py
APK_Source/pizer/recovery/Core/: Commands.py  Console.py
PiZer_Flutter/: README.md  pubspec.yaml
PiZer_Flutter/android/app/: build.gradle.kts
PiZer_Flutter/android/app/src/main/: AndroidManifest.xml
PiZer_Flutter/ios/Runner/: Info.plist
PiZer_Flutter/ios/Runner.xcodeproj/: project.pbxproj
PiZer_Flutter/lib/: main.dart
PiZer_Flutter/linux/: CMakeLists.txt
PiZer_Flutter/linux/runner/: my_application.cc
PiZer_Flutter/macos/Runner.xcodeproj/: project.pbxproj
PiZer_Flutter/macos/Runner/Configs/: AppInfo.xcconfig
PiZer_Flutter/test/: widget_test.dart
PiZer_Flutter/web/: index.html  manifest.json
PiZer_Flutter/windows/: CMakeLists.txt
PiZer_Flutter/windows/runner/: Runner.rc  main.cpp
conda-recipe/: meta.yaml
pizer/: __init__.py  cleaner.py  cli.py  file_parser.py  gui.py  mobile_gui.py
pizer/recovery/: runner.py
pizer/recovery/Core/Stylesheet/: Styling.py
tests/: test_cleaner.py
(+2 files in other folders)
